# realtimex-sdk

./: CHANGELOG.md  README.md  pyproject.toml  verify_tts.js  verify_tts.py
.github/workflows/: npm-publish.yml  pypi-publish.yml
python/: README.md
python/realtimex_sdk/: __init__.py  activities.py  api.py  client.py  llm.py  port.py  task.py  tts.py  webhook.py
typescript/: README.md  package-lock.json  package.json  tsconfig.json
typescript/src/: index.ts  types.ts
typescript/src/modules/: activities.ts  api.ts  llm.ts  port.ts  task.ts  tts.ts  webhook.ts
