[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "realtimex-sdk"
version = "1.0.0"
description = "Python SDK for building Local Apps that integrate with RealtimeX"
readme = "python/README.md"
license = "MIT"
authors = [
    { name = "RealtimeX Team", email = "team@realtimex.ai" }
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "supabase>=2.0.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/realtimex/rtx-local-app-sdk"
Documentation = "https://docs.realtimex.ai/local-apps"
Repository = "https://github.com/realtimex/rtx-local-app-sdk"

[tool.hatch.build.targets.wheel]
packages = ["python/realtimex_sdk"]
